--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	 android:versionCode="4" android:versionName="1.1"
 	 package="com.tmarki.comicmaker"
-	 android:installLocation="preferExternal">
+	 android:installLocation="preferExternal" android:versionName="1.1.1" android:versionCode="5">
       
     <uses-sdk android:minSdkVersion="5" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
