--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	 package="com.tmarki.comicmaker"
-	 android:installLocation="preferExternal" android:versionName="1.1.3" android:versionCode="7">
+	 android:installLocation="preferExternal" android:versionName="1.1.5" android:versionCode="9">
       
     <uses-sdk android:minSdkVersion="5" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+  	<uses-permission android:name="android.permission.INTERNET"/>
+  	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="com.tmarki.comicmaker.ComicMakerApp"
@@ -14,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+    <activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation"/>
     </application>
 </manifest>
